tests/ui/asm/x86_64/srcloc.stderr
error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:19:15
   |
LL |         asm!("invalid_instruction");
   |               ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:23:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:28:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:34:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:41:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:46:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

warning: scale factor without index register is ignored
  --> $DIR/srcloc.rs:49:15
   |
LL |         asm!("movaps %xmm3, (%esi, 2)", options(att_syntax));
   |               ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:23
   |
LL |     movaps %xmm3, (%esi, 2)
   |                          ^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:53:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:59:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:66:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:73:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:80:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:87:14
   |
LL |             "invalid_instruction1",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:88:14
   |
LL |             "invalid_instruction2",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:94:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:94:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:103:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:103:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:107:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:107:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:118:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:118:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:122:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:122:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:6:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:135:14
   |
LL |             "invalid_instruction"
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 24 previous errors; 1 warning emitted

